differential_testing/gcc_regression/gcc_reg_cb/results/gcc540/save_st/pr23576.c-5.4.0-2.out.txt
pr23576.c:1:23: error: array type has incomplete element type ‘struct ipr_path_entry’
 struct ipr_path_entry path[0];  
                       ^
